[package]
name = "vcd_frequency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo"] }
csv = "1.2.1"
intmap = { version = "2.0.0", features = ["serde"] }
vcd = "0.6.1"
